get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
set(gc_opt_libs ${dialect_libs} ${conversion_libs} MLIROptLib)
add_llvm_executable(gc-opt gc-opt.cpp)
if(GC_MLIR_CXX_FLAGS)
    target_compile_options(gc-opt PRIVATE ${GC_MLIR_CXX_FLAGS})
endif()
target_link_libraries(gc-opt PRIVATE ${gc_opt_libs})

add_subdirectory(dnnl)
